<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/img_movie_media"
        android:layout_width="0dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img_movie_poster"
        android:layout_width="96dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_media"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_movie_poster"
        app:layout_constraintTop_toTopOf="@+id/img_movie_poster"
        tools:text="Avengers: Endgame" />

    <TextView
        android:id="@+id/text_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="@+id/text_movie_title"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_title"
        tools:text="12 August 2019" />

    <TextView
        android:id="@+id/label_movie_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_runtime"
        android:textColor="@android:color/black"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="@+id/text_movie_release_date"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_release_date" />

    <TextView
        android:id="@+id/text_movie_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/label_movie_runtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_movie_runtime"
        tools:text="139 min" />

    <TextView
        android:id="@+id/label_movie_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_budget"
        android:textColor="@android:color/black"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="@+id/label_movie_runtime"
        app:layout_constraintTop_toBottomOf="@+id/label_movie_runtime" />

    <TextView
        android:id="@+id/text_movie_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/label_movie_budget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_movie_budget"
        app:layout_constraintVertical_bias="0.0"
        tools:text="$ 89 million" />

    <TextView
        android:id="@+id/label_movie_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_revenue"
        android:textColor="@android:color/black"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="@+id/label_movie_budget"
        app:layout_constraintTop_toBottomOf="@+id/label_movie_budget" />

    <TextView
        android:id="@+id/text_movie_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/label_movie_revenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_movie_revenue"
        app:layout_constraintVertical_bias="0.0"
        tools:text="$ 239 million" />

    <TextView
        android:id="@+id/label_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_overview"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_movie_poster" />

    <TextView
        android:id="@+id/text_movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_overview"
        tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept ..." />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_movie_genre"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_movie_overview" />

    <TextView
        android:id="@+id/label_crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_crew"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_movie_genre" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_movie_crew"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_crew" />

    <TextView
        android:id="@+id/label_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_cast"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_movie_crew" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_movie_cast"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_cast" />

</android.support.constraint.ConstraintLayout>