<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_account_backdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_account"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_account_backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_account_backdrop" />

    <!--todo: elevation for lower api-->
    <ImageView
        android:id="@+id/img_account_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view_account"
        app:layout_constraintEnd_toEndOf="@+id/card_view_account"
        app:layout_constraintStart_toStartOf="@+id/card_view_account"
        app:layout_constraintTop_toTopOf="@+id/card_view_account"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txt_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_account"
        app:layout_constraintStart_toStartOf="@+id/card_view_account"
        app:layout_constraintTop_toBottomOf="@+id/img_account_avatar"
        tools:text="Tony Stark Junior" />

    <TextView
        android:id="@+id/txt_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_account_name"
        app:layout_constraintStart_toStartOf="@+id/txt_account_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_account_name"
        tools:text="ironman" />

    <TextView
        android:id="@+id/label_account_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:text="@string/favorite"
        app:layout_constraintEnd_toStartOf="@+id/label_account_rated"
        app:layout_constraintStart_toStartOf="@+id/card_view_account"
        app:layout_constraintTop_toBottomOf="@+id/txt_account_username" />

    <TextView
        android:id="@+id/txt_account_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/label_account_favorite"
        app:layout_constraintStart_toStartOf="@+id/label_account_favorite"
        app:layout_constraintTop_toBottomOf="@+id/label_account_favorite"
        tools:text="130" />

    <TextView
        android:id="@+id/label_account_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:text="@string/rated"
        app:layout_constraintEnd_toEndOf="@+id/card_view_account"
        app:layout_constraintStart_toStartOf="@+id/card_view_account"
        app:layout_constraintTop_toBottomOf="@+id/txt_account_username" />

    <TextView
        android:id="@+id/txt_account_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/label_account_rated"
        app:layout_constraintStart_toStartOf="@+id/label_account_rated"
        app:layout_constraintTop_toBottomOf="@+id/label_account_rated"
        tools:text="1000" />

    <TextView
        android:id="@+id/label_account_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        android:text="@string/watchlist"
        app:layout_constraintEnd_toEndOf="@+id/card_view_account"
        app:layout_constraintStart_toEndOf="@+id/label_account_rated"
        app:layout_constraintTop_toBottomOf="@+id/txt_account_username" />

    <TextView
        android:id="@+id/txt_account_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/label_account_watchlist"
        app:layout_constraintStart_toStartOf="@+id/label_account_watchlist"
        app:layout_constraintTop_toBottomOf="@+id/label_account_watchlist"
        tools:text="20" />

    <TextView
        android:id="@+id/label_account_playlist"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/created_playlist"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_account" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_account_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_account_playlist" />

</android.support.constraint.ConstraintLayout>